@@ -1,0 +1,11 @@
+#!/bin/sh
+
+set -e
+
+if [ "$1" = "remove" ] || [ "$1" = "deconfigure" ] ; then
+	update-alternatives --remove flask /usr/bin/python3-flask
+fi
+
+#DEBHELPER#
+
+exit 0
